--- a/index.html
+++ b/index.html
@@ -5,34 +5,311 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ada Salvador Avalos | About Me</title>
   <style>
-    body { font-family: Arial, sans-serif; text-align: center; margin:0; padding:0; background:#f4f4f9; color:#333; }
-    header { background: #222; color:white; padding:2rem; }
-    .profile-pic { width:150px; height:150px; border-radius:50%; object-fit:cover; margin-bottom:1rem; border:3px solid #fff; }
-    h1 { color:#f4f4f9; margin-bottom:0.5rem; }
-    p { max-width:600px; margin:0.5rem auto; line-height:1.5; }
-    a.button { display:inline-block; margin-top:2rem; padding:1rem 2rem; background:#0066cc; color:white; text-decoration:none; border-radius:8px; font-weight:bold; }
-    a.button:hover { background:#004999; }
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body { 
+      font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
+      line-height: 1.6;
+      color: #374151;
+      background: #ffffff;
+      min-height: 100vh;
+    }
+
+    header { 
+      background: #f9fafb;
+      padding: 3rem 2rem;
+      text-align: center;
+      border-bottom: 1px solid #e5e7eb;
+    }
+
+    .profile-pic { 
+      width: 140px;
+      height: 140px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin-bottom: 1.5rem;
+      border: 2px solid #e5e7eb;
+      transition: all 0.2s ease;
+    }
+
+    .profile-pic:hover {
+      border-color: #d1d5db;
+    }
+
+    h1 { 
+      font-size: 2.25rem;
+      font-weight: 600;
+      color: #111827;
+      margin-bottom: 0.75rem;
+      letter-spacing: -0.025em;
+    }
+
+    .header-subtitle {
+      font-size: 1.125rem;
+      color: #6b7280;
+      margin-bottom: 0.5rem;
+      font-weight: 400;
+    }
+
+    .header-location {
+      font-size: 1rem;
+      color: #9ca3af;
+    }
+
+    main {
+      max-width: 750px;
+      margin: 0 auto;
+      padding: 3rem 2rem;
+    }
+
+    .section {
+      margin-bottom: 3rem;
+      padding-bottom: 2rem;
+      border-bottom: 1px solid #f3f4f6;
+    }
+
+    .section:last-child {
+      border-bottom: none;
+      margin-bottom: 0;
+    }
+
+    h2 {
+      font-size: 1.5rem;
+      font-weight: 600;
+      color: #111827;
+      margin-bottom: 1.5rem;
+      padding-bottom: 0.5rem;
+      border-bottom: 2px solid #f3f4f6;
+    }
+
+    p {
+      font-size: 1rem;
+      color: #4b5563;
+      line-height: 1.7;
+      margin-bottom: 1.25rem;
+    }
+
+    .skills {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 0.5rem;
+      margin: 1.5rem 0;
+    }
+
+    .skill-tag {
+      background: #f3f4f6;
+      color: #374151;
+      padding: 0.375rem 0.75rem;
+      border-radius: 6px;
+      font-size: 0.875rem;
+      font-weight: 500;
+      border: 1px solid #e5e7eb;
+      transition: all 0.2s ease;
+    }
+
+    .skill-tag:hover {
+      background: #e5e7eb;
+      border-color: #d1d5db;
+    }
+
+    .contact-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 1rem;
+      margin-bottom: 2rem;
+    }
+
+    .contact-item {
+      background: #f9fafb;
+      border: 1px solid #e5e7eb;
+      padding: 1.25rem;
+      border-radius: 8px;
+      transition: all 0.2s ease;
+    }
+
+    .contact-item:hover {
+      background: #f3f4f6;
+      border-color: #d1d5db;
+    }
+
+    .contact-label {
+      color: #111827;
+      margin-bottom: 0.5rem;
+      font-weight: 500;
+      font-size: 0.875rem;
+      text-transform: uppercase;
+      letter-spacing: 0.025em;
+    }
+
+    .contact-item a {
+      color: #374151;
+      text-decoration: none;
+      font-weight: 400;
+      transition: color 0.2s ease;
+    }
+
+    .contact-item a:hover {
+      color: #111827;
+      text-decoration: underline;
+    }
+
+    .projects-preview {
+      background: #f9fafb;
+      border: 1px solid #e5e7eb;
+      border-radius: 8px;
+      padding: 1.5rem;
+      margin: 1rem 0 2rem;
+    }
+
+    .projects-preview h3 {
+      color: #111827;
+      margin-bottom: 0.75rem;
+      font-size: 1.125rem;
+      font-weight: 600;
+    }
+
+    .projects-preview p {
+      color: #6b7280;
+      margin-bottom: 1.25rem;
+      font-size: 0.95rem;
+    }
+
+    .button {
+      display: inline-block;
+      padding: 0.75rem 1.5rem;
+      background: #111827;
+      color: white;
+      text-decoration: none;
+      border-radius: 6px;
+      font-weight: 500;
+      font-size: 0.875rem;
+      transition: all 0.2s ease;
+      border: 2px solid #111827;
+    }
+
+    .button:hover {
+      background: #374151;
+      border-color: #374151;
+    }
+
+    .center {
+      text-align: center;
+    }
+
+    @media (max-width: 768px) {
+      header { padding: 2.5rem 1.5rem; }
+      h1 { font-size: 1.875rem; }
+      .profile-pic { width: 120px; height: 120px; }
+      main { padding: 2rem 1rem; }
+      .contact-grid { grid-template-columns: 1fr; }
+      h2 { font-size: 1.25rem; }
+    }
+
+    @media (max-width: 480px) {
+      .section { margin-bottom: 2rem; }
+      .skills { gap: 0.375rem; }
+    }
+
+    /* Subtle animations */
+    .section {
+      opacity: 0;
+      transform: translateY(20px);
+      transition: all 0.6s ease;
+    }
+
+    .section.visible {
+      opacity: 1;
+      transform: translateY(0);
+    }
   </style>
 </head>
 <body>
   <header>
     <img src="profile.jpg" alt="Ada Salvador Avalos" class="profile-pic">
     <h1>Ada Salvador Avalos</h1>
-    <p>Acoustic Engineer | Software Engineer | Audio DSP & AI/ML</p>
-    <p>Barcelona, Catalonia, Spain</p>
+    <p class="header-subtitle">Acoustic Engineer • Software Engineer • Audio DSP & AI/ML</p>
+    <p class="header-location">Barcelona, Catalonia, Spain</p>
   </header>
 
-  <section>
-    <h2>About Me</h2>
-    <p>
-      As someone passionate about technology and music, I’ve studied music since childhood while building a strong engineering foundation. 
-      I work with audio technologies, including encoding, streaming, playback, and DSP.
-    </p>
-    <p>
-      I also have experience in AI/ML applied to sound analysis, transcription, and generation. 
-      I enjoy solving complex problems at the intersection of acoustics, software development, and AI.
-    </p>
-    <a href="projects.html" class="button">View My Projects</a>
-  </section>
+  <main>
+    <div class="section">
+      <h2>About Me</h2>
+      <p>
+        As someone passionate about technology and music, I've studied music since childhood while building a strong engineering foundation. 
+        I work with audio technologies, including encoding, streaming, playback, and digital signal processing.
+      </p>
+      <p>
+        I also have experience with artificial intelligence and machine learning applied to sound analysis, transcription, and generation, combining my technical skills with my love for audio. I enjoy solving complex problems at the intersection of acoustics, software development, and AI, and I’m always eager to explore new ways to innovate in audio technology.
+      </p>
+      
+      <div class="skills">
+        <span class="skill-tag">Audio DSP</span>
+        <span class="skill-tag">Machine Learning</span>
+        <span class="skill-tag">Sound Analysis</span>
+        <span class="skill-tag">Audio Streaming</span>
+        <span class="skill-tag">Music Technology</span>
+        <span class="skill-tag">Software Engineering</span>
+      </div>
+    </div>
+
+    <div class="section">
+      <h2>Projects & Research</h2>
+      <div class="projects-preview">
+        <h3>Featured Work</h3>
+        <p>
+          Explore my portfolio including neural network-based audio loop generation, MusicXML transcription systems, 
+          ESP32 digital processors, and advanced signal processing research projects.
+        </p>
+        <div class="center">
+          <a href="projects.html" class="button">View My Projects</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="section">
+      <h2>Contact Information</h2>
+      <div class="contact-grid">
+        <div class="contact-item">
+          <div class="contact-label">Email</div>
+          <a href="mailto:adasalvadoravalos@gmail.com">adasalvadoravalos@gmail.com</a>
+        </div>
+        <div class="contact-item">
+          <div class="contact-label">LinkedIn</div>
+          <a href="https://www.linkedin.com/in/ada-salvador-avalos" target="_blank">linkedin.com/in/ada-salvador-avalos</a>
+        </div>
+      </div>
+    </div>
+  </main>
+
+  <script>
+    // Simple intersection observer for fade-in animations
+    document.addEventListener('DOMContentLoaded', function() {
+      const sections = document.querySelectorAll('.section');
+      
+      const observer = new IntersectionObserver((entries) => {
+        entries.forEach(entry => {
+          if (entry.isIntersecting) {
+            entry.target.classList.add('visible');
+          }
+        });
+      }, {
+        threshold: 0.1,
+        rootMargin: '0px 0px -50px 0px'
+      });
+
+      sections.forEach(section => {
+        observer.observe(section);
+      });
+
+      // Show first section immediately
+      if (sections.length > 0) {
+        sections[0].classList.add('visible');
+      }
+    });
+  </script>
 </body>
 </html>
