--- a/projects.html
+++ b/projects.html
@@ -5,75 +5,348 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ada Salvador Avalos | Projects</title>
   <style>
-    body { font-family: Arial, sans-serif; margin:0; padding:0; background:#f4f4f9; color:#333; }
-    header { background: #222; color:white; padding:2rem; text-align:center; }
-    .profile-pic { width:120px; height:120px; border-radius:50%; object-fit:cover; margin-bottom:1rem; border:3px solid #fff; }
-    h1 { color:#f4f4f9; margin-bottom:0.5rem; }
-    section { max-width:900px; margin:2rem auto; padding:1rem; }
-    h2 { color:#222; }
-    .project { background:white; padding:1rem; margin-bottom:1.5rem; border-radius:8px; box-shadow:0 2px 6px rgba(0,0,0,0.1); }
-    .skills { margin-top:0.5rem; }
-    .skill-badge { display:inline-block; background:#eee; color:#333; padding:0.3rem 0.6rem; margin:0.2rem; border-radius:5px; font-size:0.85rem; font-weight:bold; }
-    a { color:#0066cc; text-decoration:none; }
-    a:hover { text-decoration:underline; }
-    .video-embed { margin-top:1rem; position:relative; padding-bottom:56.25%; height:0; overflow:hidden; }
-    .video-embed iframe { position:absolute; top:0; left:0; width:100%; height:100%; border:none; }
-    .button { display:inline-block; margin:1rem 0; padding:0.5rem 1rem; background:#0066cc; color:white; text-decoration:none; border-radius:8px; font-weight:bold; }
-    .button:hover { background:#004999; }
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body { 
+      font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
+      line-height: 1.6;
+      color: #374151;
+      background: #ffffff;
+      min-height: 100vh;
+    }
+
+    header { 
+      background: #f9fafb;
+      padding: 2.5rem 2rem;
+      text-align: center;
+      border-bottom: 1px solid #e5e7eb;
+    }
+
+    .profile-pic { 
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin-bottom: 1rem;
+      border: 2px solid #e5e7eb;
+      transition: all 0.2s ease;
+    }
+
+    .profile-pic:hover {
+      border-color: #d1d5db;
+    }
+
+    h1 { 
+      font-size: 1.875rem;
+      font-weight: 600;
+      color: #111827;
+      margin-bottom: 0.5rem;
+      letter-spacing: -0.025em;
+    }
+
+    .header-subtitle {
+      font-size: 1rem;
+      color: #6b7280;
+      margin-bottom: 0.5rem;
+      font-weight: 400;
+    }
+
+    .header-location {
+      font-size: 0.875rem;
+      color: #9ca3af;
+      margin-bottom: 1.5rem;
+    }
+
+    .nav-button {
+      display: inline-block;
+      padding: 0.625rem 1.25rem;
+      background: #111827;
+      color: white;
+      text-decoration: none;
+      border-radius: 6px;
+      font-weight: 500;
+      font-size: 0.875rem;
+      transition: all 0.2s ease;
+      border: 2px solid #111827;
+    }
+
+    .nav-button:hover {
+      background: #374151;
+      border-color: #374151;
+    }
+
+    main {
+      max-width: 900px;
+      margin: 0 auto;
+      padding: 3rem 2rem;
+    }
+
+    .page-title {
+      font-size: 2rem;
+      font-weight: 600;
+      color: #111827;
+      margin-bottom: 2.5rem;
+      padding-bottom: 0.5rem;
+      border-bottom: 2px solid #f3f4f6;
+    }
+
+    .project {
+      background: #ffffff;
+      border: 1px solid #e5e7eb;
+      border-radius: 8px;
+      padding: 2rem;
+      margin-bottom: 2rem;
+      transition: all 0.2s ease;
+    }
+
+    .project:hover {
+      border-color: #d1d5db;
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+    }
+
+    .project-meta {
+      display: inline-block;
+      background: #f3f4f6;
+      color: #6b7280;
+      padding: 0.25rem 0.75rem;
+      border-radius: 4px;
+      font-size: 0.75rem;
+      font-weight: 500;
+      text-transform: uppercase;
+      letter-spacing: 0.025em;
+      margin-bottom: 1rem;
+    }
+
+    .featured .project-meta {
+      background: #111827;
+      color: #ffffff;
+    }
+
+    .project h3 {
+      font-size: 1.25rem;
+      font-weight: 600;
+      color: #111827;
+      margin-bottom: 1rem;
+      line-height: 1.4;
+    }
+
+    .project h3 a {
+      color: #111827;
+      text-decoration: none;
+      transition: color 0.2s ease;
+    }
+
+    .project h3 a:hover {
+      color: #4b5563;
+      text-decoration: underline;
+    }
+
+    .project p {
+      font-size: 1rem;
+      color: #4b5563;
+      line-height: 1.7;
+      margin-bottom: 1.25rem;
+    }
+
+    .skills {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 0.5rem;
+      margin-bottom: 1.5rem;
+    }
+
+    .skill-badge {
+      background: #f3f4f6;
+      color: #374151;
+      padding: 0.375rem 0.75rem;
+      border-radius: 6px;
+      font-size: 0.75rem;
+      font-weight: 500;
+      border: 1px solid #e5e7eb;
+      transition: all 0.2s ease;
+    }
+
+    .skill-badge:hover {
+      background: #e5e7eb;
+      border-color: #d1d5db;
+    }
+
+    .video-embed {
+      margin-top: 1.5rem;
+      position: relative;
+      padding-bottom: 56.25%;
+      height: 0;
+      overflow: hidden;
+      border-radius: 8px;
+      border: 1px solid #e5e7eb;
+      background: #f9fafb;
+    }
+
+    .video-embed iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border: none;
+      border-radius: 8px;
+    }
+
+    .featured {
+      border: 2px solid #111827;
+      position: relative;
+    }
+
+    .featured::before {
+      content: 'Featured';
+      position: absolute;
+      top: -1px;
+      right: 1rem;
+      background: #111827;
+      color: white;
+      padding: 0.25rem 0.75rem;
+      border-radius: 0 0 4px 4px;
+      font-size: 0.75rem;
+      font-weight: 600;
+      letter-spacing: 0.025em;
+    }
+
+    @media (max-width: 768px) {
+      header { padding: 2rem 1.5rem; }
+      h1 { font-size: 1.5rem; }
+      .profile-pic { width: 80px; height: 80px; }
+      main { padding: 2rem 1rem; }
+      .project { padding: 1.5rem; }
+      .page-title { font-size: 1.75rem; }
+    }
+
+    @media (max-width: 480px) {
+      .project { padding: 1.25rem; }
+      .project h3 { font-size: 1.125rem; }
+      .skills { gap: 0.375rem; }
+    }
+
+    /* Subtle animations */
+    .project {
+      opacity: 0;
+      transform: translateY(20px);
+      transition: all 0.6s ease;
+    }
+
+    .project.visible {
+      opacity: 1;
+      transform: translateY(0);
+    }
   </style>
 </head>
 <body>
-
   <header>
     <img src="profile.jpg" alt="Ada Salvador Avalos" class="profile-pic">
     <h1>Ada Salvador Avalos</h1>
-    <p>Acoustic Engineer | Software Engineer | Audio DSP & AI/ML</p>
-    <p>Barcelona, Catalonia, Spain</p>
-    <a href="index.html" class="button">Back to About Me</a>
+    <p class="header-subtitle">Acoustic Engineer • Software Engineer • Audio DSP & AI/ML</p>
+    <p class="header-location">Barcelona, Catalonia, Spain</p>
+    <a href="index.html" class="nav-button">← Back to About Me</a>
   </header>
 
-  <section>
-    <h2>Projects</h2>
+  <main>
+    <h2 class="page-title">Projects & Research</h2>
 
-    <div class="project">
-      <h3><a href="https://github.com/AdaSalvadorAvalos/Digital-Processors" target="_blank">Digital Processors</a></h3>
-      <p>Developed a series of hands-on ESP32 projects for a Digital Processors course, including WiFi audio streaming, serial communication, SD card playback, and OLED menu systems. The final project integrates multiple concepts to create a temperature-responsive music player with push-button navigation and dynamic audio selection.</p>
-      <div class="skills"><span class="skill-badge">C</span><span class="skill-badge">C++</span><span class="skill-badge">HTML</span></div>
+    <div class="project featured">
+      <div class="project-meta">Master's Thesis</div>
+      <h3><a href="https://github.com/AdaSalvadorAvalos/freesound-loop-generator" target="_blank">Freesound Loop Generator</a></h3>
+      <p>Synthesis of new audio loops using neural networks, with a focus on creative sound generation through latent space manipulation. This project explores creative audio loop generation using neural networks, leveraging the RAVE model and the Freesound Loop Dataset. It includes preprocessing pipelines, dataset analysis, training setup, inference scripts in Max for real-time generation, and evaluation tools.</p>
+      <div class="skills">
+        <span class="skill-badge">Python</span>
+        <span class="skill-badge">PyTorch</span>
+        <span class="skill-badge">Max</span>
+        <span class="skill-badge">Audio Processing</span>
+        <span class="skill-badge">Machine Learning</span>
+      </div>
+      <div class="video-embed">
+        <iframe src="https://www.youtube.com/embed/28W14f0ROkA" title="Master thesis video introduction & demonstration" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
     </div>
 
-    <div class="project">
-      <h3><a href="https://github.com/AdaSalvadorAvalos/Analog-Digital-Communications" target="_blank">Analog and Digital Communications</a></h3>
-      <p>Completed a series of MATLAB practices for the Analog and Digital Communications (ADC) course as part of a Bachelor's in Audiovisual Systems Engineering.
-        The project covers digital baseband and passband modulation, PAM and PSK encoding/decoding, matched filtering, SNR analysis, and symbol detection.</p>
-      <div class="skills"><span class="skill-badge">MATLAB</span></div>
-    </div>
-
-    <div class="project">
-      <h3><a href="https://github.com/AdaSalvadorAvalos/musicxml-transcriber-editor" target="_blank">Final Degree Project: MusicXML Transcriber & Editor</a></h3>
-      <p> A desktop app that converts piano monophonic audio (MP3/MIDI) into MusicXML, with a web-based interface for editing, playback, and applying musical effects.
-        The system transcribes audio into MusicXML scores and provides tools for visualization, editing, and applying musical effects.</p>
-      <div class="skills"><span class="skill-badge">Python</span><span class="skill-badge">JavaScript</span><span class="skill-badge">HTML</span><span class="skill-badge">SVG</span><span class="skill-badge">jQuery</span></div>
+    <div class="project featured">
+      <div class="project-meta">Bachelor's Thesis</div>
+      <h3><a href="https://github.com/AdaSalvadorAvalos/musicxml-transcriber-editor" target="_blank">MusicXML Transcriber & Editor</a></h3>
+      <p>A desktop app that converts piano monophonic audio (MP3/MIDI) into MusicXML, with a web-based interface for editing, playback, and applying musical effects. The system transcribes audio into MusicXML scores and provides tools for visualization, editing, and applying musical effects.</p>
+      <div class="skills">
+        <span class="skill-badge">Python</span>
+        <span class="skill-badge">JavaScript</span>
+        <span class="skill-badge">HTML</span>
+        <span class="skill-badge">SVG</span>
+        <span class="skill-badge">jQuery</span>
+      </div>
       <div class="video-embed">
         <iframe src="https://www.youtube.com/embed/34K5PG9SdkM" title="Bachelor final project demonstration" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </div>
 
     <div class="project">
+      <div class="project-meta">Research Project</div>
       <h3><a href="https://github.com/AdaSalvadorAvalos/conditioned-morpher-transformer-model" target="_blank">Conditioned Morpher Transformer</a></h3>
       <p>As part of the Freesound Loop Generator experiments, I developed the Conditioned Morpher Transformer (CMT), a custom transformer model for audio loop morphing with explicit control over style and tempo. The CMT enables smooth interpolation between audio loops while controlling perceptual attributes.</p>
-      <div class="skills"><span class="skill-badge">Python</span><span class="skill-badge">PyTorch</span><span class="skill-badge">Machine Learning</span><span class="skill-badge">Audio DSP</span></div>
-    </div>
-
-    <div class="project">
-      <h3><a href="https://github.com/AdaSalvadorAvalos/freesound-loop-generator" target="_blank">Master’s Thesis: Freesound Loop Generator</a></h3>
-      <p>Synthesis of new audio loops using neural networks, with a focus on creative sound generation through latent space manipulation. This project explores creative audio loop generation using neural networks, leveraging the RAVE model and the Freesound Loop Dataset. It includes preprocessing pipelines, dataset analysis, training setup, inference scripts in Max for real-time generation, and evaluation tools.</p>
-      <div class="skills"><span class="skill-badge">Python</span><span class="skill-badge">PyTorch</span><span class="skill-badge">Max</span><span class="skill-badge">Audio Processing</span><span class="skill-badge">Machine Learning</span></div>
-      <div class="video-embed">
-        <iframe src="https://www.youtube.com/embed/28W14f0ROkA" title="Master thesis video introduction & demonstration" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <div class="skills">
+        <span class="skill-badge">Python</span>
+        <span class="skill-badge">PyTorch</span>
+        <span class="skill-badge">Machine Learning</span>
+        <span class="skill-badge">Audio DSP</span>
       </div>
     </div>
 
-  </section>
+    <div class="project">
+      <div class="project-meta">Course Project</div>
+      <h3><a href="https://github.com/AdaSalvadorAvalos/Digital-Processors" target="_blank">Digital Processors</a></h3>
+      <p>Developed a series of hands-on ESP32 projects for a Digital Processors course, including WiFi audio streaming, serial communication, SD card playback, and OLED menu systems. The final project integrates multiple concepts to create a temperature-responsive music player with push-button navigation and dynamic audio selection.</p>
+      <div class="skills">
+        <span class="skill-badge">C</span>
+        <span class="skill-badge">C++</span>
+        <span class="skill-badge">HTML</span>
+      </div>
+    </div>
 
+    <div class="project">
+      <div class="project-meta">Academic Project</div>
+      <h3><a href="https://github.com/AdaSalvadorAvalos/Analog-and-Digital-Communications-Labs" target="_blank">Analog and Digital Communications</a></h3>
+      <p>Completed a series of MATLAB practices for the Analog and Digital Communications (ADC) course as part of a Bachelor's in Audiovisual Systems Engineering. The project covers digital baseband and passband modulation, PAM and PSK encoding/decoding, matched filtering, SNR analysis, and symbol detection.</p>
+      <div class="skills">
+        <span class="skill-badge">MATLAB</span>
+      </div>
+    </div>
+  </main>
+
+  <script>
+    // Simple intersection observer for fade-in animations
+    document.addEventListener('DOMContentLoaded', function() {
+      const projects = document.querySelectorAll('.project');
+      
+      const observer = new IntersectionObserver((entries) => {
+        entries.forEach((entry, index) => {
+          if (entry.isIntersecting) {
+            setTimeout(() => {
+              entry.target.classList.add('visible');
+            }, index * 100);
+          }
+        });
+      }, {
+        threshold: 0.1,
+        rootMargin: '0px 0px -50px 0px'
+      });
+
+      projects.forEach(project => {
+        observer.observe(project);
+      });
+
+      // Show first project immediately
+      if (projects.length > 0) {
+        projects[0].classList.add('visible');
+      }
+    });
+  </script>
 </body>
 </html>
