--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
         <h3>Featured Work</h3>
         <p>
           Explore my portfolio including neural network-based audio loop generation, MusicXML transcription systems, 
-          ESP32 digital processors, and advanced signal processing research projects.
+          ESP32 digital processors, and advanced signal processing projects.
         </p>
         <div class="center">
           <a href="projects.html" class="button">View My Projects</a>
