--- a/index.html
+++ b/index.html
@@ -239,11 +239,10 @@
     <div class="section">
       <h2>About Me</h2>
       <p>
-        As someone passionate about technology and music, I've studied music since childhood while building a strong engineering foundation. 
-        I work with audio technologies, including encoding, streaming, playback, and digital signal processing.
+        I’ve been passionate about music since childhood, and over time I’ve paired that with a strong foundation in engineering. This path naturally led me to the intersection of technology and sound, where I focus on audio technologies such as encoding, streaming, playback, and digital signal processing.
       </p>
       <p>
-        I also have experience with artificial intelligence and machine learning applied to sound analysis, transcription, and generation, combining my technical skills with my love for audio. I enjoy solving complex problems at the intersection of acoustics, software development, and AI, and I’m always eager to explore new ways to innovate in audio technology.
+        I also work with artificial intelligence and machine learning, applying them to sound analysis, transcription, and generation. By blending technical expertise with a love for audio, I enjoy solving complex problems where acoustics, software development, and AI come together. I’m always exploring new ways to push the boundaries of what’s possible in audio technology.
       </p>
       
       <div class="skills">
