--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ada Salvador Avalos | Projects</title>
+  <link rel="icon" type="image/jpeg" href="1757272197250.jpeg">
   <style>
     * {
       margin: 0;
